# persistwd

./: .deny.toml  Cargo.toml  README.md  bindings.h  build.rs  deny.toml  flake.nix
nix/: devenv.nix  nixos.nix  package.nix  shell.nix
src/: bindings.rs  cli.rs  config.rs  main.rs  shadow.rs
