[package]
name = "persistwd"
version = "0.0.1"
authors = ["Xarvex"]
edition = "2021"
rust-version = "1.74.1" # cargo-msrv on 2024-06-29
description = "persistwd helps keep passwords persistent for non-mutable user setups"
repository = "https://gitlab.com/xarvex/persistwd"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
notify = "7.0.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"

[build-dependencies]
bindgen = "0.71.1"

[profile.release]
opt-level = 3
strip = true
lto = true
