[package]
name = "persistwd"
version = "0.0.1"
authors = ["Xarvex"]
edition = "2024"
rust-version = "1.85.1" # cargo-msrv on 2025-08-28

description = "persistwd helps keep passwords persistent for non-mutable user setups"
repository = "https://codeberg.org/xarvex/persistwd"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
notify = "8.2.0"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"

[build-dependencies]
bindgen = "0.72.1"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
